# MB-scanner

./: .dockerignore  .env.sample  .gitignore  .gitmodules  .mise.toml  AGENTS.md  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml  exclude-list.txt  pyproject.toml
.claude/skills/: apply-review  consult-session  generate-approach-spec  japanese-doc-style  verify-session
.github/: copilot-instructions.md
ai-guide/: code-map.md  current-research.md  setup-guide.md
ai-guide/adr/: 0001-pruning-ast-traversal.md  0002-babel-topdown-subtree-hash.md  0003-bottom-up-mapping-deferred.md  0004-pruning-setup-single.md  0005-grammar-derived-blacklist.md  0006-grammar-derived-whitelist.md  0007-in-source-testing-internal-helpers.md  0008-mutate-revert-replacement.md  0009-statement-placeholder-visibility.md  0010-preprocessing-enclosure-3-tier.md  0011-preprocessing-tier-structure.md  0012-equivalence-checker-execution-environment.md  0014-case-split-for-both-changed.md  (+15 more)
mb-analyzer/: build.mjs  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
mb_scanner/: pyproject.toml
mb_scanner/adapters/cli/: __init__.py  equivalence.py  preprocessing.py  pruning.py
mb_scanner/adapters/gateways/equivalence/: node_runner_gateway.py
mb_scanner/adapters/gateways/preprocessing/selakovic/: node_runner_gateway.py
mb_scanner/adapters/gateways/pruning/: node_runner_gateway.py
mb_scanner/domain/entities/: equivalence.py  preprocessing.py  pruning.py
mb_scanner/domain/ports/: preprocessor.py  pruner.py
mb_scanner/mb_scanner/: _runner.py  cli.py
mb_scanner/mb_scanner/adapters/cli/: __init__.py  _utils.py  equivalence.py
mb_scanner/mb_scanner/adapters/gateways/equivalence/: __init__.py
mb_scanner/mb_scanner/adapters/gateways/pruning/: __init__.py
mb_scanner/mb_scanner/domain/ports/: equivalence_checker.py  preprocessor.py
mb_scanner/mb_scanner/equivalence/: cli.py  gateway.py  models.py  verdict.py
mb_scanner/mb_scanner/preprocessing/: cli.py  dataset.py  gateway.py  models.py
mb_scanner/mb_scanner/pruning/: cli.py  gateway.py  models.py
mb_scanner/mb_scanner/use_cases/: equivalence_verification.py
mb_scanner/mb_scanner/use_cases/preprocessing/: selakovic.py
mb_scanner/src/mb_scanner/: __init__.py
mb_scanner/src/mb_scanner/adapters/cli/: __init__.py  benchmark.py  count_lines.py  equivalence.py  github.py  migrate.py  preprocessing.py  pruning.py  search.py  visualize.py
mb_scanner/src/mb_scanner/adapters/cli/codeql/: __init__.py  create_db.py  extract.py  query.py  summary.py
mb_scanner/src/mb_scanner/adapters/gateways/code_counter/: js_counter.py
mb_scanner/src/mb_scanner/adapters/gateways/codeql/: __init__.py  analyzer.py  command.py  database.py  sarif.py
mb_scanner/src/mb_scanner/adapters/gateways/equivalence/: node_runner_gateway.py
mb_scanner/src/mb_scanner/adapters/gateways/github/: __init__.py  client.py  clone.py  schema.py  search.py
mb_scanner/src/mb_scanner/adapters/gateways/preprocessing/: __init__.py
mb_scanner/src/mb_scanner/adapters/gateways/preprocessing/selakovic/: node_runner_gateway.py
mb_scanner/src/mb_scanner/adapters/gateways/visualization/: boxplot.py  scatter_plot.py
mb_scanner/src/mb_scanner/adapters/repositories/: sqlalchemy_project_repo.py  sqlalchemy_topic_repo.py
mb_scanner/src/mb_scanner/core/: __init__.py  cleanup.py
mb_scanner/src/mb_scanner/domain/entities/: __init__.py  benchmark.py  equivalence.py  extraction.py  preprocessing.py  project.py  pruning.py  sarif.py  summary.py
mb_scanner/src/mb_scanner/domain/ports/: codeql_gateway.py  github_gateway.py  preprocessor.py  project_repository.py  repository_cloner.py  topic_repository.py
mb_scanner/src/mb_scanner/infrastructure/: config.py  logging_config.py
mb_scanner/src/mb_scanner/infrastructure/db/: migrations.py  session.py
mb_scanner/src/mb_scanner/infrastructure/orm/: base.py  tables.py
mb_scanner/src/mb_scanner/use_cases/: benchmark_runner.py  codeql_database_creation.py  codeql_query_execution.py  equivalence_verification.py  pruning.py  search_and_store.py  visualization.py
mb_scanner/src/mb_scanner/use_cases/preprocessing/: selakovic.py
mb_scanner/tests/adapters/cli/: __init__.py
mb_scanner/tests/adapters/gateways/equivalence/: test_node_runner_gateway_batch.py  test_selakovic_fixtures.py
mb_scanner/tests/adapters/gateways/pruning/: test_node_runner_gateway.py  test_node_runner_gateway_batch.py
mb_scanner/tests/domain/entities/: test_equivalence.py
mb_scanner/tests/equivalence/: test_cli.py  test_gateway.py  test_gateway_batch.py  test_models.py  test_selakovic_fixtures.py  test_verdict.py
mb_scanner/tests/fixtures/selakovic/: pattern_04_dom_mutation.json  pattern_04_jquery_mock.json  pattern_05_string_concat.json  pattern_08_modulo_positive.json  pattern_09_typeof_undefined.json  pattern_10_max_apply.json
mb_scanner/tests/preprocessing/: test_gateway.py  test_gateway_batch.py  test_models.py
mb_scanner/tests/pruning/: test_cli.py  test_gateway.py  test_gateway_batch.py  test_models.py
mb_scanner/tests/use_cases/: test_equivalence_verification.py  test_pruning.py
mb_scanner/use_cases/: equivalence_verification.py
research/: pyproject.toml
research/research/preprocess_workload_reachability/code/: build_equiv_input.py  build_prune_input.py  funnel.py  inspect_candidates.py  jsonl_to_json.py  normalize_pattern.py  summarize.py
research/research/preprocess_workload_reachability/notes/: full-rerun-17bb101-snapshot.md  migration-plan.md  refactoring-todo.md
research/research/pruning/code/: classify_dataset.py  compare_litfix.mjs  match_ast.mjs  match_regex.py  pattern_map.py  spike_literal_impact.mjs  stage_funnel.py
research/research/pruning/notes/: method.md  result.md  spike-literal-impact.md
research/src/research/preprocess_workload_reachability/code/: build_equiv_input.py  build_prune_input.py  inspect_candidates.py  jsonl_to_json.py  scp_to_server.sh
research/src/research/preprocess_workload_reachability/notes/: dep-vendoring.md  v1-notes.md  v1-plan.md  v1-prompt-history.md
(+193 files in other folders)
