[project]
name = "mb-scanner-workspace"
version = "0.0.0"
description = "Workspace root for MB-scanner (mb_scanner core + research-side analysis)"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["mb_scanner", "research"]

[tool.uv.sources]
mb-scanner = { workspace = true }
research = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.9",
    "pyright>=1.1.390",
    "import-linter>=2.11",
    "mb-scanner",
    "research",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    "*.egg-info",
    "research",  # 研究用 spike スクリプト群は本流の規約から除外
]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "E",    # pycodestyle (Error)
    "W",    # pycodestyle (Warning)
    "F",    # Pyflakes
    "I",    # isort (importの並び替え)
    "D",    # docstrings (ドキュメンテーション文字列のチェック)
    "UP",   # pyupgrade (新しいPython構文への更新)
    "B",    # flake8-bugbear (バグの可能性が高いコードを検出)
    "C4",   # flake8-comprehensions (不要な内包表記の書き換え)
    "SIM",  # flake8-simplify (よりシンプルな書き方へのリファクタリング)
    "PTH",  # flake8-use-pathlib (os.pathの代わりにpathlibを推奨)
    "RUF",  # Ruff固有のルール
    "PERF", # perflint (パフォーマンス関連の改善提案)
    "PL",   # Pylint (コード品質向上)
    "N",    # pep8-naming (命名規則)
    "RET",  # flake8-return (return文の改善提案)
]

ignore = [
    "PLR2004", # マジックナンバーの使用 (コード生成プロジェクトでは許可)
    "T201",    # print文の使用 (デバッグ用途で使用)
    "PLR0913", # 引数が多すぎる (AST処理で必要)
    "PLR0912", # 分岐が多すぎる (AST処理で必要)
    "PLR0915", # 文が多すぎる (AST処理で必要)
    "PLR0911", # 戻り値が多すぎる (AST処理で必要)
    "PERF203", # try-except内でのループ (必要な場合がある)
    "RUF002",  # docstring内の日本語文字 (日本語プロジェクトのため許可)
    "RUF003",  # comment内の日本語文字 (日本語プロジェクトのため許可)
    "E501",    # 行が長すぎる (コード生成で長いテンプレートが必要)
    "D104",  # __init__.py のdocstring (CA構造で多数の空__init__.pyが必要)
    "D105",  # __repr__ 等のmagic methodのdocstring
    "D107",  # __init__ のdocstring (クラスdocstringで代替)
    "D400",
    "D413",
    "D415",
    # 競合するdocstringルールを無効化
    "D203",    # incorrect-blank-line-before-class (D211と競合)
    "D213",    # multi-line-summary-second-line (D212と競合)
    "RUF001",  # docstring内の日本語文字 (日本語プロジェクトのため許可)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # 未使用import (re-exportの場合)
"mb_scanner/src/mb_scanner/adapters/cli/**/*.py" = ["B008"]  # typer.Optionをデフォルト引数で使用 (Typerの正しい使い方)
"mb_scanner/src/mb_scanner/domain/ports/**/*.py" = ["D102"]  # Protocolメソッドはクラスdocstringで代替
"tests/**/*.py" = ["D101", "D102", "D103"]  # テストのクラス/メソッド/関数の docstring 強制は過剰

[tool.ruff.lint.isort]
# プロジェクト内のモジュールを正しく認識
known-first-party = ["mb_scanner", "research"]
# 標準ライブラリ、サードパーティ、ファーストパーティの順に並び替え
force-sort-within-sections = true

[tool.ruff.format]
# Ruffのフォーマッターに関する設定 (Blackとほぼ互換)
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["mb_scanner/src/mb_scanner"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
    ".venv",
    "**/__pycache__",
    "mb-analyzer",            # TypeScript 側の node_modules 等を対象外に
    "**/node_modules",
    "tmp",                    # 作業 dir (研究の試行錯誤スクリプト、過去 0001-0021 含む)
]
stubPath = "stubs"
reportMissingTypeStubs = false

# テストディレクトリ専用の設定
# research/ は試行錯誤しやすさを優先して basic モードに緩める (mb_scanner 本体は strict 維持)
executionEnvironments = [
    { root = "tests", reportPrivateUsage = "none", reportUnknownMemberType = "none", reportUnknownArgumentType = "none", reportUnknownVariableType = "none", reportMissingParameterType = "none", reportUnknownParameterType = "none", reportArgumentType = "none", reportUnknownLambdaType = "none" },
    { root = "research", reportUnknownVariableType = "none", reportUnknownMemberType = "none", reportUnknownArgumentType = "none", reportUnknownParameterType = "none", reportUnknownLambdaType = "none", reportMissingTypeArgument = "none" },
]
