[project]
name = "mb-scanner"
version = "0.1.0"
description = "GitHub repository scanner with CodeQL batch platform"
readme = "../README.md"
authors = [
    { name = "tomoya0318", email = "s266227@wakayama-u.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings",
    "typer",
    "sqlalchemy",
    "pydantic>=2.11.7",
    "PyGithub",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[project.scripts]
mbs = "mb_scanner.adapters.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mb_scanner"]

[tool.importlinter]
root_packages = ["mb_scanner"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Clean Architecture layer dependencies"
type = "layers"
layers = [
    "mb_scanner.infrastructure",
    "mb_scanner.adapters",
    "mb_scanner.use_cases",
    "mb_scanner.domain",
]
# adapters は infrastructure を参照する（CLI=composition root, repositories=ORM実装）
ignore_imports = [
    "mb_scanner.adapters.** -> mb_scanner.infrastructure.**",
]

[[tool.importlinter.contracts]]
name = "Domain must not depend on infrastructure frameworks"
type = "forbidden"
source_modules = ["mb_scanner.domain"]
forbidden_modules = ["sqlalchemy", "typer", "github", "matplotlib"]
