[project]
name = "mb-scanner"
version = "0.1.0"
description = "Research pipeline for deriving performance patterns from microbenchmarks (preprocess / equivalence check / pruning)"
readme = "../README.md"
authors = [
    { name = "tomoya0318", email = "s266227@wakayama-u.ac.jp" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings",
    "typer",
    "pydantic>=2.11.7",
]

[project.scripts]
mbs = "mb_scanner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mb_scanner"]

[tool.importlinter]
root_packages = ["mb_scanner"]
include_external_packages = true

# パイプライン段 (equivalence / pruning / preprocessing) は互いに import しない (ADR-0030)。
# 共通基盤 (mb_scanner._utils / config / cli) への依存は段間 import ではないので許可される。
[[tool.importlinter.contracts]]
name = "Pipeline components are independent"
type = "independence"
modules = [
    "mb_scanner.equivalence",
    "mb_scanner.pruning",
    "mb_scanner.preprocessing",
]

# 型契約 (models) と gateway (Protocol + 実装) は CLI フレームワークに依存しない。
# cli.py は Typer commands なので対象外 (ADR-0030 §import-linter)。
[[tool.importlinter.contracts]]
name = "Models and gateways must not depend on the CLI framework"
type = "forbidden"
source_modules = [
    "mb_scanner.equivalence.models",
    "mb_scanner.equivalence.gateway",
    "mb_scanner.pruning.models",
    "mb_scanner.pruning.gateway",
    "mb_scanner.preprocessing.models",
    "mb_scanner.preprocessing.gateway",
]
forbidden_modules = ["typer"]
