[project]
name = "research"
version = "0.0.0"
description = "Research-side analysis and visualization for MB-scanner outputs"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    # 現状 import 実体は 0 件だが意図的に維持する: research スクリプトから
    # mb_scanner の entities / CLI を将来 import する計画があるため (Q4 確定)。
    "mb-scanner",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research"]
exclude = [
    "research/*/inputs/**",
    "research/*/reports/**",
    "research/*/clusters/**",
    "research/*/figures/**",
]

[tool.uv.sources]
mb-scanner = { workspace = true }
